# openbabel

./: .cvsignore  .gitignore  .misspell-fixer.ignore  .safety-policy.yml  .sanitizer-ignorelist  .travis.yml  AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  ChangeLog.1.x  CyberWorld.git  Doxyfile  FAQ  INSTALL  INSTALL.Windows  Makefile.am  Makefile.in  NEWS  NEWS.md  OpenBabel2Config.cmake.in  OpenBabel2ConfigVersion.cmake.in  OpenBabel3Config.cmake.in  OpenBabel3ConfigVersion.cmake.in  Primer.html  Quantum.git  README  README.md  SECURITY.md  StdAfx.cpp  THANKS  Vector.cpp  Vector.h  acinclude.m4  aclocal.m4  alchemy.cpp  amber.cpp  aromatic.txt  atom.cpp  authors.txt  (+122 more)
data/: CMakeLists.txt  MACCS.txt  Makefile.am  Makefile.in  SMARTS_InteLigand.txt  SMARTS_InteLigand_051110.txt  UFF.prm  alexandria.prm  aromatic.h  aromatic.txt  atomization-energies.txt  atomtyp.h  atomtyp.txt  bin2hex.pl  bondtyp.h  bondtyp.txt  chemdrawcdx.h  eem.txt  eem2015ba.txt  eem2015bm.txt  eem2015bn.txt  eem2015ha.txt  eem2015hm.txt  eem2015hn.txt  element.h  element.txt  eqeqIonizations.txt  extable.txt  fragment-index.txt  fragments.txt  gaff.prm  genfragmentheaders.py  genheaders.sh  ghemical.prm  isotope-small.txt  isotope.h  isotope.txt  logP.txt  logp.txt  mm2.prm  (+48 more)
doc/: .cvsignore  CMakeLists.txt  Doxyfile  Doxyfile-man  Doxyfile.in  FAQ  FAQ.html  Makefile.am  Makefile.in  Migration  Migration.html  OBGUI.1  OBTwoMigration.html  OpenBabelGUI.html  Primer.html  README.dioxin.pov  README.povray  api-footer.html  api-header.html  babel.1  babel.html  babel31.inc  dioxin.inc  dioxin.mol2  dioxin.pov  modules.h  obabel.1  obabel.html  obchiral.1  obchiral.html  obconformer.1  obconformer.html  obdistgen.1  obenergy.1  obenergy.html  obfit.1  obfit.html  obgen.1  obgen.html  obgrep.1  (+21 more)
doc/examples/: CMakeLists.txt  obconformersearch_default.cpp  obconversion_readstring.cpp  obconversion_readstring.py  obfingerprint_getfingerprint.cpp  obforcefield_energy.cpp
include/: CMakeLists.txt  LBFGS.h  Makefile.am  Makefile.in  RDKitConv.h  chemdrawcdx.h  color.h  happyhttp.h  iconv.h  inchi_api.h  rang.h
include/LBFGS/: LineSearchBacktracking.h  LineSearchBracketing.h  LineSearchNocedalWright.h  Param.h
include/OB-BGL/: example.cpp  mol_graph.h  verbose_visitors.h
include/inchi/: Makefile.am  Makefile.in  aux2atom.h  bcf_s.h  comdef.h  extr_ct.h  ichi.h  ichi_bns.h  ichi_io.h  ichicano.h  ichicant.h  ichicomn.h  ichicomp.h  ichidrp.h  ichierr.h  ichilnct.c  ichimain.h  ichimake.c  ichimake.h  ichinorm.h  ichiparm.h  ichiprt2.c  ichiring.c  ichiring.h  ichirvr2.c  ichirvr6.c  ichirvrs.h  ichisize.h  ichister.h  ichitaut.h  ichitime.h  ikey_base26.h  inchi_api.h  inchi_dll.h  inchi_dll_a.h  inchi_dll_main.c  inchi_dll_main.h  inchi_gui.h  inchicmp.h  incomdef.h  (+10 more)
include/inchi102/: aux2atom.h  dispstru.h  extr_ct.h  ichi.h  ichi_bns.h  ichi_io.h  ichicano.h  ichicant.h  ichicomn.h  ichicomp.h  ichidrp.h  ichierr.h  ichimain.h  ichimake.h  ichinorm.h  ichiparm.h  ichiring.h  ichirvrs.h  ichisize.h  ichister.h  ichitaut.h  ichitime.h  ikey_base26.h  inchi_api.h  inchi_dll_a.h  inchi_dll_main.h  inchicmp.h  incomdef.h  inpdef.h  lreadmol.h  mode.h  mol2atom.h  readmol.h  strutil.h  util.h
include/inchi103/: aux2atom.h  extr_ct.h  ichi.h  ichi_bns.h  ichi_io.h  ichicano.h  ichicant.h  ichicomn.h  ichicomp.h  ichidrp.h  ichierr.h  ichimain.h  ichimake.h  ichinorm.h  ichiparm.h  ichiring.h  ichirvrs.h  ichisize.h  ichister.h  ichitaut.h  ichitime.h  ikey_base26.h  inchi_api.h  inchi_dll_a.h  inchi_dll_main.h  inchicmp.h  incomdef.h  inpdef.h  lreadmol.h  mode.h  strutil.h  util.h
include/libxml/: parser.h  pattern.h  schemasInternals.h  tree.h  valid.h  xmlerror.h  xmlexports.h  xmlreader.h  xmlschemas.h  xmlschemastypes.h  xmlversion.h
include/openbabel/: Makefile.am  Makefile.in  alias.h  aromaticity_resolver.h  atom.h  atomclass.h  base.h  bitvec.h  bond.h  bondtyper.h  builder.h  canon.h  chains.h  chargemodel.h  chiral.h  color.h  conformersearch.h  confsearch.h  cpcomplex.h  data.h  data_utilities.h  datacache.h  descriptor.h  distgeom.h  dlhandler.h  dock.h  elements.h  ffinternal.h  (+62 more)
scripts/: CMakeLists.txt  Makefile.am  Makefile.in  openbabel-R.i  openbabel-csharp.i  openbabel-java.i  openbabel-mono.i  openbabel-perl.i  openbabel-php.i  openbabel-python.i  openbabel-python2.i  openbabel-python3.i  openbabel-ruby.i  openbabel.i
src/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  RDKitConv.cpp  README  StdAfx.cpp  StdAfx.h  Vector.cpp  Vector.h  alchemy.cpp  alias.cpp  all.h  amber.cpp  aromatic.h  aromatic.txt  aromaticity_resolver.cpp  atom.cpp  atom.h  atomtyp.h  atomtyp.txt  babelconfig.h.in  balst.cpp  base.cpp  base.h  bc32.mak  bgf.cpp  bin2hex.pl  binary.cpp  binary.h  binary_io.cpp  binary_io.h  bitgrid.cpp  bitgrid.h  bitvec.cpp  bitvec.h  bond.cpp  bond.h  bond.txt  bondtyp.txt  (+204 more)
test/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  README  addhtest.cpp  addhydrogens.cpp  aliastest.cpp  aligntest.cpp  aromatest.cpp  aromatest.pl  aromatic.pl  aromatics.smi  atom.cpp  attype.00.smi  automorphismtest.cpp  bond.cpp  buildertest.cpp  canonconsistenttest.cpp  canonfragmenttest.cpp  canonogmtest.cpp  canonstabletest.cpp  cansmi.cpp  cansmiles_shuffle.sh  carspacegrouptest.cpp  charge-gasteiger.cpp  charge-mmff94.cpp  charge_gasteiger.cpp  charge_mmff94.cpp  cifspacegrouptest.cpp  cistranstest.cpp  cml.pl  cml.sh  cmlreadfile.cpp  conversion.cpp  conversiontest.cpp  coulombtest.cpp  data.cpp  datatest.cpp  distgeomtest.cpp  (+101 more)
tools/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  README  babel.cpp  calcrmsd.cpp  confab.cpp  find_dale.cpp  getopt.c  getopt.h  nbabel.cpp  obabel.cpp  obchiral.cpp  obconformer.cpp  obdistgen.cpp  obdoc.cpp  obenergy.cpp  obfit.cpp  obfitall.cpp  obfragment-index.cpp  obfragment.cpp  obgen.cpp  obgrep.cpp  obminimize.cpp  obmm.cpp  obprobe.cpp  obprop.cpp  obrms.cpp  obrotamer.cpp  obrotate.cpp  obseq.cpp  obsort-fragment.cpp  obspectrophore.cpp  obsym.cpp  obtanimoto.cpp  obtautomer.cpp  obthermo.cpp  obtorsion.cpp  obxyz.cpp  (+2 more)
(+29757 files in other folders)
